name:               hs-capnp
version:            0.1.0.0
cabal-version:      >= 1.10
category:           Data
license:            MIT
license-file:       LICENSE
author:             Charles Strahan
maintainer:         charles@cstrahan.com
copyright:          Copyright (C) 2015 Charles Strahan
homepage:           http://github.com/cstrahan/hs-capnp
bug-reports:        http://github.com/cstrahan/hs-capnp/issues
build-type:         Simple
-- synopsis:           
-- description:        
extra-source-files:
  .gitignore

source-repository head
  type:     git
  location: git://github.com/cstrahan/hs-capnp.git

library
  default-language:   Haskell2010
  build-depends:
      base              >= 4 && < 5
    , aeson
    , array
    , parsec
    , text
    , vector
    , bytestring
    , unordered-containers
    , containers

  exposed-modules:
    Data.CapnProto.Arena
    Data.CapnProto.Layout
    Data.CapnProto.Pointer
    Data.CapnProto.Serialize
    Data.CapnProto.Units

  other-modules:
    -- Some.Module.Here

  hs-source-dirs:     src

  -- ghc-options:        -O2
  -- ghc-options:        -O2 -ddump-deriv -ddump-to-file

executable capnpc-hs
  default-language: Haskell98
  build-depends:
      base              >= 4 && < 5
    , aeson
    , parsec
    , text
    , vector
    , bytestring
    , unordered-containers
    , pretty-show
    , hs-capnp
    , transformers
    , split
    , containers
    , ghc-prim

  hs-source-dirs: capnpc-hs

  other-modules:
    Data.CapnProto.Schema
    Data.CapnProto.Schema.Generated
    Data.CapnProto.Schema.Generator

  -- if os(osx)
    -- ghc-options: -optl-headerpad_max_install_names

  main-is:     Main.hs
  --ghc-options: -O2 -ddump-deriv -ddump-to-file

test-suite spec
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:   test
  main-is:          Spec.hs
  other-modules:
    -- Some.Module.Here
  build-depends:
      base              >= 4 && < 5
    , hspec
    , hspec-core
    , hs-capnp
    , bytestring
